# fastAPI_project

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 58c0bda9ca3d_initial_migration.py  74de1452a6f0_user_model.py  d12021dd1720_role_model.py
src/api/: __init__.py
src/api/v1/: auth.py  user.py
src/auth/: auth.py
src/core/: config.py
src/db/models/: __init__.py  shorted_url.py  user.py
src/services/: shorted_url.py
